# translator

./: CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  c_8hpp.html  c_8hpp__dep__incl.map  c_8hpp__dep__incl.md5  c_8hpp__incl.map  c_8hpp__incl.md5  c_8hpp_source.html  classes.html  classpugi_1_1xml__attribute-members.html  classpugi_1_1xml__attribute.html  classpugi_1_1xml__attribute__iterator-members.html  classpugi_1_1xml__attribute__iterator.html  classpugi_1_1xml__document-members.html  classpugi_1_1xml__document.html  classpugi_1_1xml__named__node__iterator-members.html  classpugi_1_1xml__named__node__iterator.html  classpugi_1_1xml__node-members.html  classpugi_1_1xml__node.html  classpugi_1_1xml__node__iterator-members.html  classpugi_1_1xml__node__iterator.html  classpugi_1_1xml__object__range-members.html  classpugi_1_1xml__object__range.html  classpugi_1_1xml__text-members.html  classpugi_1_1xml__text.html  classpugi_1_1xml__tree__walker-members.html  classpugi_1_1xml__tree__walker.html  classpugi_1_1xml__writer-members.html  classpugi_1_1xml__writer.html  classpugi_1_1xml__writer__file-members.html  classpugi_1_1xml__writer__file.html  classpugi_1_1xml__writer__stream-members.html  classpugi_1_1xml__writer__stream.html  classpugi_1_1xpath__exception-members.html  classpugi_1_1xpath__exception.html  classpugi_1_1xpath__node-members.html  classpugi_1_1xpath__node.html  (+495 more)
libs/Translator/: CMakeLists.txt
libs/Translator/include/: logger.hpp  options_parser.hpp  translator.hpp
libs/Translator/resources/: scheme.xml
libs/Translator/src/: logger.cpp  options_parser.cpp  translator.cpp
libs/Translator/src/core/: scanner.hpp  source_file.cpp  source_file.hpp  u.hpp  uformat_builder.cpp  uformat_builder.hpp  universal_format.cpp  universal_format.hpp  xml_source_file.cpp  xml_source_file.hpp
libs/Translator/src/core/backend/: c.hpp
libs/Translator/src/core/source/: sblock.hpp  selements.hpp  slink.hpp
libs/Translator/src/core/structures/: ublock.hpp  (+3 more)
libs/Translator/src/utility/: config.hpp  messages.hpp  paths.hpp  types.hpp  uuid.hpp
(+131 files in other folders)
